// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChangePaymentsLayout does not render if no saved payments 1`] = `null`;

exports[`ChangePaymentsLayout does not render if saved payments and not hide card but not logged in 1`] = `null`;

exports[`ChangePaymentsLayout does not render if saved payments but hide card is true 1`] = `null`;

exports[`ChangePaymentsLayout passes changePayments as onClick prop 1`] = `
<div
  className="display-block soft-half-top">
  <h6
    className="outlined--bottom outlined--light text-dark-tertiary"
    onClick={[Function]}
    style={
      Object {
        "cursor": "pointer",
        "display": "inline",
      }
    }>
    Change payment account
  </h6>
</div>
`;

exports[`ChangePaymentsLayout renders under the right conditions 1`] = `
<div
  className="display-block soft-half-top">
  <h6
    className="outlined--bottom outlined--light text-dark-tertiary"
    onClick={undefined}
    style={
      Object {
        "cursor": "pointer",
        "display": "inline",
      }
    }>
    Change payment account
  </h6>
</div>
`;

exports[`SecondaryLayout does not render if authorized and not logged in 1`] = `null`;

exports[`SecondaryLayout does not render if not authorized and logged in 1`] = `null`;

exports[`SecondaryLayout passes register as an onClick prop 1`] = `
<button
  className="btn--thin btn--small display-inline-block push-left@lap-and-up push-half-left@handheld btn--dark-tertiary"
  disabled={false}
  onClick={[Function]}
  style={Object {}}>
  Register
</button>
`;

exports[`SecondaryLayout renders if not authorized and not logged in 1`] = `
<button
  className="btn--thin btn--small display-inline-block push-left@lap-and-up push-half-left@handheld btn--dark-tertiary"
  disabled={false}
  onClick={undefined}
  style={Object {}}>
  Register
</button>
`;

exports[`TertiaryLayout does not render if disabledGuest 1`] = `null`;

exports[`TertiaryLayout does not render if logged in 1`] = `null`;

exports[`TertiaryLayout passes giveAsGuest as onClick prop 1`] = `
<div
  className="display-block soft-half-top">
  <h6
    className="outlined--bottom outlined--light text-dark-tertiary"
    onClick={[Function]}
    style={
      Object {
        "cursor": "pointer",
        "display": "inline",
      }
    }>
    Give as Guest
  </h6>
</div>
`;

exports[`TertiaryLayout renders if not disabledGuest and not logged in 1`] = `
<div
  className="display-block soft-half-top">
  <h6
    className="outlined--bottom outlined--light text-dark-tertiary"
    onClick={undefined}
    style={
      Object {
        "cursor": "pointer",
        "display": "inline",
      }
    }>
    Give as Guest
  </h6>
</div>
`;
